--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,35 +53,28 @@ jobs:
         python manage.py test
 
   build_and_push_to_docker_hub:
+    name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: tests  # Не выполнять сразу, ждать, пока выполнится tests
+    needs: tests
     steps:
       - name: Check out the repo
-        # Получение исходного кода из репозитория
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
-        # Установка сборщика контейнеров Docker
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker 
-        # Авторизация на Docker Hub
         uses: docker/login-action@v2
-        # При помощи with передаём в action параметры username и password
         with:
-          username: ${{ secrets.DOCKER_USERNAME }} 
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          # Хорошо ли держать логин и пароль прямо в коде workflow?
-          # Нет, это нехорошо
       - name: Push to DockerHub
-        # Одновременный билд и пуш образа в Docker Hub
         uses: docker/build-push-action@v4
         with:
-          # Параметр context: ./backend/ указывает, что нужный Dockerfile 
-          # находится в ./backend/
           context: ./backend/
+          push: true
+          tags: ashtonkor/taski_backend:latest
   
   frontend_tests:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up nodeJS
@@ -90,18 +83,17 @@ jobs:
       with:
         # Это параметр воркфлоу, указывающий нужную версию Node.js
         node-version: 18
-
     - name: Install dependencies
       # Эта команда устанавливает зависимости для фронтенда
       run: |
         cd frontend/
         npm ci
-
     - name: Test frontend
       # Запускаем тесты
       run: |
         cd frontend/
         npm run test
+
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
